# deep_leearning

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
config/: README.md  pipeline_config.yaml
config/experiments/: decision_tree_classification.yaml  lightgbm_classification.yaml  logistic_regression_abalone.yaml  mlp_classification.yaml  mlp_regression.yaml
docs/diagrams/: ml_workflow.md
notebooks/: create_dataset.py  framework_tutorial.ipynb
src/: experiment.py
src/data/: README.md  manager.py  storage.py
src/evaluation/: README.md  __init__.py  evaluator.py
src/models/: README.md  base_model.py
src/models/supervised/: __init__.py
src/models/supervised/classification/: __init__.py  decision_tree.py  gradient_boosting.py  (+4 more)
src/pipeline/: README.md
src/pipeline/mlflow/: core.py  mlflow_pipeline.py
src/preprocess/: README.md  base_preprocessor.py  preprocess_pipeline.py
src/preprocess/basic/: label_encoder.py  missing_value_handler.py  outlier_remover.py  scaler.py
src/preprocess/dimensionality_reduction/: pca.py  tsne.py
src/preprocess/feature_selection/: correlation_selector.py  variance_selector.py
src/training/: README.md  trainer.py
src/training/cross_validation/: cross_validation.py
src/training/tuners/: base_tuner.py  grid_search.py  optuna.py
src/utils/: __init__.py  config_manager.py  logger.py  registry.py
tests/: README.md  conftest.py  test_base_model.py  test_data_loader.py  test_evaluator.py  test_registry_components.py  test_trainer.py
(+12 files in other folders)
